send a message to other users

--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+
 {% block content %}
 <div class="container-fluid h-100">
   <div class="row justify-content-center h-100">
@@ -10,18 +11,22 @@
     </nav>
 
     <main class="col-10">
-        <section style="position: absolute; left: 15px; right: 0; top: 0; bottom: 54px; padding-bottom: 56px; max-height: 100%; overflow: auto;">
-            <p><strong>João</strong> <span class="badge badge-primary">RH</span>: Não sei cara!</p>
+        <section id="list__messages"  style="position: absolute; left: 15px; right: 0; top: 0; bottom: 54px; padding-bottom: 56px; max-height: 100%; overflow: auto;">
+
         </section>
         <div style="position: absolute;left: 0;right: 0;bottom: 0;">
             <nav class="navbar navbar-light bg-light col">
                 <div class="input-group">
                     <span class="input-group-addon">You</span>
-                    <input type="text" class="form-control" placeholder="Text...">
+                    <input type="text" id="message__user" class="form-control" placeholder="Text...">
                 </div>
             </nav>
         </div>
     </main>
   </div>
 </div>
+{% endblock %}
+
+{% block footer-scripts %}
+<script type="text/javascript" src="{% static 'chat/main.js' %}"></script>
 {% endblock %}
