--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,12 @@
     </style>
   </head>
   <body>
-   {% block content %}
-   {% endblock %}
+    <div class="container-fluid h-100">
+        <div class="row justify-content-center h-100">
+        {% block content %}
+        {% endblock %}
+        </div>
+    </div>
    {% block footer-scripts %}
     {% endblock %}
   </body>
